--- a/Eventos/eventos2.html
+++ b/Eventos/eventos2.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="eventos1.js"></script>
+    <script src="eventos2.js"></script>
     <title>Eventos</title>
 </head>
-<body onload= "clicarBody()">
-    <input type="button" value="Clica’m i veuràs" onclick="alert('Gràcies per clicar');" />
-    <div onclick="alert('Has clicat amb el ratolí');" 
-    onmouseover="alert('Acabes de passar el ratolí per damunt');">
+<body onload = "clicarBody()">
+    <input type="button" value="Clica’m i veuràs" onclick="clicarBoton()" />
+    <div onclick="clicarDiv('Has clicat amb el ratolí');" 
+    onmouseover="pasarSobreDiv()">
         Pots clicar sobre aquest element o simplement passar el ratolí per damunt
     </div>
 </body>
